@@ -33,6 +33,7 @@ $ -> Language fix or change
 ^ Change label of 'inherit' in Global Config permissions.
 + Add access check to categories form field.
 ^ Configure add and edit access controls in com_content (changes to access checks in JControllerForm, article controller and model).
+# Fix bug in JTable::delete when tracking assets.
 
 11-Oct-2009 Ron Severdia
 ^ Standardized all list filters
